syntax = "proto3";
package relayer;

option go_package = "github.com/0xPellNetwork/aegis/x/relayer/types";

// store key is tss+chainid
message PendingNonces {
  int64 nonce_low = 1;
  int64 nonce_high = 2;
  int64 chain_id = 3;
  string tss = 4;
}
